# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
config/: win-msvc.toolchain  win-ninja.toolchain  win64.toolchain
include/raytracer/: AxisAlignedBoundingBox.h  BvhNode.h  Camera.h  HitRecord.h  IHitable.h  Image.h  Instance.h  Mesh.h  OrthoNormalBasis.h  Perlin.h  Plane.h  Ray.h  Rectangle.h  Scene.h  Sphere.h  TexCoord.h  Texture.h  Timer.h  Vec3.h  _ray.h  materials.h  math.h  multithreading.h  pdfs.h  random_numbers.h  textures.h  vec3.h
include/raytracer/integrators/: BasicIntegrator.h  Integrator.h
include/raytracer/materials/: Interaction.h  ObjectPDF.h  SurfaceInteraction.h  materials.h  pdfs.h
include/raytracer/objects/: BvhNode.h  ConstantMedium.h  Environment.h  Group.h  IObject.h  InvertedObject.h  Mesh.h  MeshCube.h  MeshRectangle.h  MeshSphere.h  ObjectInstance.h  Plane.h  RectXZ.h  Rectangle.h  Scene.h  Sphere.h
include/raytracer/shapes/: BvhNode.h  ConstantMedium.h  Environment.h  Group.h  InvertedObject.h  Mesh.h  MeshCube.h  MeshRectangle.h  MeshSphere.h  Plane.h  RectXZ.h  Scene.h  Shape.h  ShapeInstance.h  Sphere.h
src/: AxisAlignedBoundingBox.cpp  BvhNode.cpp  Camera.cpp  Instance.cpp  Mesh.cpp  Perlin.cpp  Plane.cpp  Ray.cpp  Rectangle.cpp  Sphere.cpp  main.cpp  materials.cpp  pdfs.cpp  random_numbers.cpp  textures.cpp
src/include/raytracer/: Camera.h  HitRecord.h  IHitable.h  Image.h  Plane.h  Scene.h  Sphere.h  materials.h  random_numbers.h  ray.h  vec3.h
src/integrators/: BasicIntegrator.cpp
src/materials/: materials.cpp  pdfs.cpp
src/objects/: BvhNode.cpp  ConstantMedium.cpp  Group.cpp  Mesh.cpp  MeshRectangle.cpp  MeshSphere.cpp  ObjectInstance.cpp  Plane.cpp  RectXZ.cpp  Rectangle.cpp  Sphere.cpp
src/shapes/: BvhNode.cpp  ConstantMedium.cpp  Group.cpp  Mesh.cpp  MeshRectangle.cpp  MeshSphere.cpp  Plane.cpp  RectXZ.cpp  ShapeInstance.cpp  Sphere.cpp
src/textures/: textures.cpp
test/: test.cpp
